@@ -5,7 +5,7 @@ About
 -----
 This plugin replaces a (possibly zero-width) rectangular selection with
 integer numbers, using start/step/base etc. specified by the user.
-For practical reasons, the number of lines is limited to 500000.
+For practical reasons, the number of lines is limited to 100000.
 
 
 Requirements
